<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.example.musicalstructure.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/browseActivity"
            style="@style/categoryStyle"
            android:text="@string/category1" />

        <TextView
            android:id="@+id/topChartsActivity"
            style="@style/categoryStyle"
            android:text="@string/category2" />

        <TextView
            android:id="@+id/favoritsActivity"
            style="@style/categoryStyle"
            android:text="@string/category3" />

        <TextView
            android:id="@+id/savedActivity"
            style="@style/categoryStyle"
            android:text="@string/category4" />

        <TextView
            android:id="@+id/searchActivity"
            style="@style/categoryStyle"
            android:text="@string/category5" />

        <TextView
            android:id="@+id/nowPlayingActivity"
            style="@style/categoryStyle"
            android:text="@string/category6" />

    </LinearLayout>
</ScrollView>
